@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19941122
+MANIFEST for ded, version t19941216
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
